MODUIMP-99: Replace /_/proxy/tenants/%s/interfaces/%s calls
https://folio-org.atlassian.net/browse/MODUIMP-99

Replace /_/proxy/tenants/%s/interfaces/%s calls
with /_/proxy/tenants/%s/modules?provide=%s calls